# TimeMachine

./: .gitignore  .vercelignore  DEPLOY-EDGEONE.md  DEPLOY.md  PLATFORM-OPS.md  QUESTIONS-FOR-OFFICIAL.md  ROADMAP.md  SETUP.md  edgeone.json  requirements.txt  vercel.json  wrangler.jsonc  知乎 Hackathon 2026 _ AI 脑洞实验室 开发者手册.docx
api/: index.py
api/_lib/: zhihu_api.py
api/data/: bride-price.json  chatgpt-after.json  china-open-source.json  curation.json  kaoyan.json  luo-yonghao.json  ofo-deposit.json  phone-scam.json  programmer-35.json  school-district.json  study-abroad.json  zhihu-itself.json
content/: share-wechat.md  zhihu-ideas-drafts.md
docs/: LLM-ROUTING.md  ROADMAP.md  ZHIHU-API-REFERENCE.md
docs/demos/: 2026-05-11-demo-v1.html  2026-05-11-demo-v2-search-oauth.html  2026-05-11-demo-v3-mood-track.html  2026-05-11-demo-v4-chatgpt-track.html  2026-05-11-demo-v5-eras.html
docs/superpowers/plans/: 2026-04-23-shiguangda-plan.md  2026-05-09-museum-upgrade-plan.md
docs/superpowers/specs/: 2026-04-23-shiguangda-design.md  (+1 more)
functions/api/: health.js  hotlist.js  logout.js  me.js  search.js  topics.js
jms-proposal/: SUBMISSION-CHECKLIST.md  proposal-draft.md
public/: index.html
public/api-data/: 996-icu.json  _index.json  china-open-source.json  manifest.json  p2p-collapse.json  phone-scam.json  yang-yongxin.json  zte-ban.json
scripts/: pyproject.toml
scripts/_lib/: zhihu_api.py
scripts/demo/: build_chatgpt_topic.py  build_demo.py  build_extra_topics.py  build_kaoyan_liuxue.py  fix_missing.py  render_html.py  server.py
worker/: index.js
(+5 files in other folders)
