[project]
name = "shiguangda-scripts"
version = "0.1.0"
description = "时光档案馆 · 离线数据管线"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "tenacity>=8",
  "pydantic>=2",
  "python-dotenv>=1",
  "psycopg[binary]>=3",
  "numpy",
  "scikit-learn",
  "openai",
  "anthropic",
  "sentence-transformers",
  "torch",
]
